# diskly

./: .cursorrules  .gitignore  .prettierrc  DATA_FLOW_EXAMPLE.md  FEATURES.md  IMPLEMENTATION_COMPLETE.md  LAZY_LOADING_IMPLEMENTATION.md  README.md  REFACTOR_SUMMARY.md  TESTING_AND_EDGE_CASES.md  package-lock.json  package.json  svelte.config.js  svelte.config.ts  tailwind.config.cjs  vite.config.js  vite.config.ts
.github/workflows/: ci.yml  publish.yml  svelte-ci.yml  tauri-ci.yml
dev/bench/: data.js
scripts/: generate-macos-icons.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/benches/: scanner_bench.rs
src-tauri/icons/: icon.icns
src-tauri/resources/: Assets.car
src-tauri/resources/app-icon.icon/: icon.json
src-tauri/src/: cache.rs  events.rs  file_ops.rs  lib.rs  main.rs  scanner.rs  volumes.rs
src/lib/components/: Progress.svelte  ScanHistory.svelte  Scanner.svelte  TreeMap.svelte  TreeNode.svelte  TreeView.svelte  UsageChart.svelte  VolumeList.svelte
src/lib/stores/: highlight.ts  scan.js  scan.ts  theme.js  theme.ts  volumes.ts
src/routes/: +layout.svelte  +page.svelte
