[package]
name = "diskly"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "diskly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
writeable = { version = "0.6.2", features = ["alloc"] }

[dependencies]
tauri = { version = "=2.9.5", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
rayon = "1"
dashmap = "6"
lru = "0.12"
num_cpus = "1"
dirs = "5"
rfd = "0.14"
writeable = { version = "0.6.2", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[patch.crates-io]
dlopen2 = { path = "vendor/dlopen2" }
dlopen2_derive = { path = "vendor/dlopen2_derive" }

